force-app/main/default/objects/Value_Prompter__c/Value_Prompter__c.object-meta.xml
<CustomObject>
    <label>Value Prompter</label>
    <nameField>
        <label>Value Prompe Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Value Prompter</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>