force-app/main/default/objects/Value_Prompter__c/fields/Access_to_the_Power_Person__c.field-meta.xml
<CustomField>
    <fullName>Access_to_the_Power_Person__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do we have access to the Power Person?</label>
    <type>Checkbox</type>
</CustomField>