force-app/main/default/objects/Value_Prompter__c/fields/Anxiety_Question__c.field-meta.xml
<CustomField>
    <fullName>Anxiety_Question__c</fullName>
    <label>Anxiety Question</label>
    <length>255</length>
    <type>Text</type>
</CustomField>