force-app/main/default/objects/Value_Prompter__c/fields/Are_Top_Risk_Identify_if_they_Occur_CMR__c.field-meta.xml
<CustomField>
    <fullName>Are_Top_Risk_Identify_if_they_Occur_CMR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Are Top Risk Identify if they Occur CM</label>
    <type>Checkbox</type>
</CustomField>