force-app/main/default/objects/Value_Prompter__c/fields/Business_Issue__c.field-meta.xml
<CustomField>
    <fullName>Business_Issue__c</fullName>
    <label>Business Issue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>