force-app/main/default/objects/Value_Prompter__c/fields/Can_it_be_related_to_Revenue_or_Profit__c.field-meta.xml
<CustomField>
    <fullName>Can_it_be_related_to_Revenue_or_Profit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can it be related to Revenue or Profit?</label>
    <type>Checkbox</type>
</CustomField>