force-app/main/default/objects/Value_Prompter__c/fields/Do_prospect_agreed_potential_buss_value__c.field-meta.xml
<CustomField>
    <fullName>Do_prospect_agreed_potential_buss_value__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do prospect agreed potential buss value?</label>
    <type>Checkbox</type>
</CustomField>