force-app/main/default/objects/Value_Prompter__c/fields/Find_prob_make_this_issue_hard_to_solve__c.field-meta.xml
<CustomField>
    <fullName>Find_prob_make_this_issue_hard_to_solve__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Find prob make this issue hard to solve?</label>
    <type>Checkbox</type>
</CustomField>