force-app/main/default/objects/Value_Prompter__c/fields/Has_a_cost_justification_been_completed__c.field-meta.xml
<CustomField>
    <fullName>Has_a_cost_justification_been_completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has a cost justification been completed?</label>
    <type>Checkbox</type>
</CustomField>