force-app/main/default/objects/Value_Prompter__c/fields/Has_client_agreed_to_a_completion_date__c.field-meta.xml
<CustomField>
    <fullName>Has_client_agreed_to_a_completion_date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has client agreed to a completion date?</label>
    <type>Checkbox</type>
</CustomField>