force-app/main/default/objects/Value_Prompter__c/fields/Has_Plan_confirmed_with_customer__c.field-meta.xml
<CustomField>
    <fullName>Has_Plan_confirmed_with_customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Plan confirmed with customer?</label>
    <type>Checkbox</type>
</CustomField>