force-app/main/default/objects/Value_Prompter__c/fields/Has_the_Business_Value_been_quantified__c.field-meta.xml
<CustomField>
    <fullName>Has_the_Business_Value_been_quantified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has the Business Value been quantified?</label>
    <type>Checkbox</type>
</CustomField>