force-app/main/default/objects/Value_Prompter__c/fields/Have_we_developed_an_eVP__c.field-meta.xml
<CustomField>
    <fullName>Have_we_developed_an_eVP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Have we developed eVP for Power Person?</label>
    <type>Checkbox</type>
</CustomField>