force-app/main/default/objects/Value_Prompter__c/fields/Is_prospect_req_any_unique_or_diff_sol__c.field-meta.xml
<CustomField>
    <fullName>Is_prospect_req_any_unique_or_diff_sol__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is prospect req any unique or diff sol?</label>
    <type>Checkbox</type>
</CustomField>