force-app/main/default/objects/Value_Prompter__c/fields/Is_Qualified_Prospect__c.field-meta.xml
<CustomField>
    <fullName>Is_Qualified_Prospect__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Qualified Prospect</label>
    <type>Checkbox</type>
</CustomField>