force-app/main/default/objects/Value_Prompter__c/fields/Plan_Comments__c.field-meta.xml
<CustomField>
    <fullName>Plan_Comments__c</fullName>
    <label>Plan Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>