force-app/main/default/objects/Value_Prompter__c/fields/Power_Comments__c.field-meta.xml
<CustomField>
    <fullName>Power_Comments__c</fullName>
    <label>Power Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>