force-app/main/default/objects/Value_Prompter__c/fields/Power_Person_has_access_to_funds_bdgt__c.field-meta.xml
<CustomField>
    <fullName>Power_Person_has_access_to_funds_bdgt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Power Person has access to funds &amp; bdgt?</label>
    <type>Checkbox</type>
</CustomField>