force-app/main/default/objects/Value_Prompter__c/fields/Validatd_Power_Person_decsion_authority__c.field-meta.xml
<CustomField>
    <fullName>Validatd_Power_Person_decsion_authority__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validatd Power Person decsion authority</label>
    <type>Checkbox</type>
</CustomField>