force-app/main/default/objects/Value_Prompter__c/fields/VisionMatch_Comments__c.field-meta.xml
<CustomField>
    <fullName>VisionMatch_Comments__c</fullName>
    <label>VisionMatch Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>