force-app/main/default/objects/Value_Prompter__c/fields/VPQ_Score__c.field-meta.xml
<CustomField>
    <fullName>VPQ_Score__c</fullName>
    <defaultValue>0</defaultValue>
    <label>VPQ Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>