force-app/main/default/objects/Value_Prompter__c/fields/Was_any_personal_value_uncovered__c.field-meta.xml
<CustomField>
    <fullName>Was_any_personal_value_uncovered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Was any personal value uncovered?</label>
    <type>Checkbox</type>
</CustomField>